text overlaping problem solve phone when sliding

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,7 +183,7 @@ ul.nav.navbar-nav.navbar-right{
 .header-sub-title{
 	font-size: 14px;
 	color: #fff;
-	margin: 20px auto 25px;
+	margin: 20px 40px 25px;
 }
 .custom-btn{
     color: #FFF;
